fix(tabs): fix selected indicator alignment

--- a/src/components/tabs/themes/tabs.base.scss
+++ b/src/components/tabs/themes/tabs.base.scss
@@ -136,6 +136,7 @@ igc-icon-button::part(base) {
     position: relative;
     grid-row: 2;
     grid-column: 1 / -1;
+    text-align: initial;
 
     span {
         position: absolute;
